WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115359
[BlackBerry] ImageBuffer::copyImage leaking memory
https://bugs.webkit.org/show_bug.cgi?id=115359
Summary
[BlackBerry] ImageBuffer::copyImage leaking memory
Mike Lattanzio
Reported
2013-04-29 08:39:46 PDT
We create a temporary buffer to give to the TiledImage expecting ownership to be transferred, but it is not.
Attachments
Patch
(2.56 KB, patch)
2013-04-29 08:44 PDT
,
Mike Lattanzio
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-cq-01 for mac-mountainlion
(624.36 KB, application/zip)
2013-04-29 12:58 PDT
,
WebKit Commit Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Mike Lattanzio
Comment 1
2013-04-29 08:44:16 PDT
Created
attachment 200018
[details]
Patch
Konrad Piascik
Comment 2
2013-04-29 08:49:57 PDT
Comment on
attachment 200018
[details]
Patch glad we're off the heap, lgtm
Jakob Petsovits
Comment 3
2013-04-29 08:52:59 PDT
Comment on
attachment 200018
[details]
Patch Seconding Konrad, this is good and important.
WebKit Commit Bot
Comment 4
2013-04-29 12:58:13 PDT
Comment on
attachment 200018
[details]
Patch Rejecting
attachment 200018
[details]
from commit-queue. New failing tests: svg/batik/text/smallFonts.svg Full output:
http://webkit-queues.appspot.com/results/243214
WebKit Commit Bot
Comment 5
2013-04-29 12:58:14 PDT
Created
attachment 200038
[details]
Archive of layout-test-results from webkit-cq-01 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the commit-queue. Bot: webkit-cq-01 Port: mac-mountainlion Platform: Mac OS X 10.8.3
Konrad Piascik
Comment 6
2013-04-30 07:44:31 PDT
Comment on
attachment 200018
[details]
Patch failure on tests not related
WebKit Commit Bot
Comment 7
2013-04-30 08:00:01 PDT
Comment on
attachment 200018
[details]
Patch Clearing flags on attachment: 200018 Committed
r149370
: <
http://trac.webkit.org/changeset/149370
>
WebKit Commit Bot
Comment 8
2013-04-30 08:00:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug