[BlackBerry] ImageBuffer::copyImage leaking memory https://bugs.webkit.org/show_bug.cgi?id=115359

Patch by Mike Lattanzio <mlattanzio@blackberry.com> on 2013-04-30
Reviewed by George Staikos.

Use a WebCore::Vector to ensure the temporary data is destroyed.
The TiledImage does not take ownership of the data.

* platform/graphics/blackberry/ImageBufferBlackBerry.cpp:
(WebCore::ImageBuffer::copyImage):

Canonical link: https://commits.webkit.org/133853@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149370 268f45cc-cd09-0410-ab3c-d52691b4dbfc